# uv-monorerpo

./: README.md  hello.py  pyproject.toml
libs/sdk/: pyproject.toml
libs/sdk/src/sdk/: __init__.py  amaizing.py
src/uv_monorerpo/: hello.py
