[project]
name = "uv-monorerpo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nir", email = "nrbnlulu@gmail.com"},
]
dependencies = [
    "sdk @ file:///${PROJECT_ROOT}/libs/sdk",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/libs/sdk#egg=sdk",
]
